--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.1.0
   font_awesome: ^5.10.1
   google_fonts: ^4.0.3
   modal_progress_hud: ^0.1.3
