--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,15 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   eva_icons_flutter: ^3.1.0
-  firebase_storage: ^11.0.13
+  firebase_storage: ^11.0.14
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0
   font_awesome: ^5.10.1
   google_fonts: ^4.0.3
+  image_picker: ^0.8.6+3
   modal_progress_hud: ^0.1.3
+  path_provider: ^2.0.13
   provider: ^6.0.5
 
 dev_dependencies:
