--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   path_provider: ^2.0.13
   provider: ^6.0.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   cloud_firestore: ^4.3.1
